--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
+  <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-N9CMMEJ9H9"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'G-N9CMMEJ9H9');
 </script>
     <!-- Required meta tags -->
@@ -15,8 +14,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta property="og:title" content="言語字聊LangTextic"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:url" content="https://langtextic.000webhostapp.com"/>
-    <meta property="og:image" content="https://langtextic.000webhostapp.com/img/logo.png"/>
+    <meta property="og:url" content="https://langtextic.github.io"/>
+    <meta property="og:image" content="https://langtextic.github.io/img/logo.png"/>
     <meta property="og:site_name" content="言語字聊LangTextic"/>
     <meta property="og:description" content="言語字聊同大家傾吓語言，講吓文字。"/>
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -27,6 +26,11 @@
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 <link rel="manifest" href="/site.webmanifest">
     <title>言語字聊 LangTextic</title>
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="http://langtextic.github.io">
+
   </head>
 
 <body style="background-color: #bbb">
@@ -50,9 +54,25 @@
               <a href="https://bit.ly/LangTexticIG" target="_blank" class="py-2 px-3 fs-4"><i class="bi bi-instagram"></i></a>
               <a href="https://bit.ly/LangTexticFB" target="_blank" class="py-2 px-3 fs-4"><i class="bi bi-facebook"></i></a>
             </div>
-  
+
+      <!--Wordle-->
+      <div class="row mt-3">
+        <div class="col text-center">
+          <h3 class="rounded-pill p-1 bg-yellow"><i class="bi bi-puzzle-fill"></i> 5trokes - 5劃Wordle</h3>     
+        </div>
+       </div>
+
+       <div class="d-flex justify-content-center text-center">
+        <div class="my-auto">
+          <a href="http://langtextic.github.io/5trokes" target="_blank"><img src="./img/5trokes.png" width="120px" class="mx-auto my-auto"></a>
+        </div>
+        <div class="fs-5 my-auto">
+          <span>一日六次機會，競猜五劃謎底！<br><a href="http://langtextic.github.io/5trokes" target="_blank">👉 按此進入 👈</a></span>
+        </div>
+       </div>
+
     <!--Video-->
-    <div class="row my-3">
+    <div class="row mb-3">
       <div class="col text-center">
         <h3 class="rounded-pill p-1 bg-yellow"><i class="bi bi-camera-reels-fill"></i> 最新影片</h3>
            <div class="ratio ratio-16x9">
