--- a/index.html
+++ b/index.html
@@ -54,6 +54,16 @@
               <a href="https://bit.ly/LangTexticIG" target="_blank" class="py-2 px-3 fs-4"><i class="bi bi-instagram"></i></a>
               <a href="https://bit.ly/LangTexticFB" target="_blank" class="py-2 px-3 fs-4"><i class="bi bi-facebook"></i></a>
             </div>
+    
+    <!--Video-->
+    <div class="row mb-3">
+      <div class="col text-center">
+        <h3 class="rounded-pill p-1 bg-yellow"><i class="bi bi-camera-reels-fill"></i> 最新影片</h3>
+           <div class="ratio ratio-16x9">
+               <iframe id="youtube_video" class="rounded-custom" allowfullscreen></iframe>
+           </div>
+      </div>
+     </div>
 
       <!--Wordle-->
       <div class="row mt-3">
@@ -70,24 +80,15 @@
           <span>一日六次機會，競猜五劃謎底！<br><a href="http://langtextic.github.io/5trokes" target="_blank">👉 按此進入 👈</a></span>
         </div>
        </div>
-
-    <!--Video-->
-    <div class="row mb-3">
-      <div class="col text-center">
-        <h3 class="rounded-pill p-1 bg-yellow"><i class="bi bi-camera-reels-fill"></i> 最新影片</h3>
-           <div class="ratio ratio-16x9">
-               <iframe id="youtube_video" class="rounded-custom" allowfullscreen></iframe>
-           </div>
-      </div>
-     </div>
  
-      <!--IG Feed-->
+<!--       <!--IG Feed-->
       <div class="row">
         <div class="col text-center">
           <h2 class="rounded-pill p-1 bg-yellow"><i class="bi bi-image"></i> IG限定</h2>
         </div>
        </div>
-           <div id="instagram-feed" class="row m-0"></div>
+           <div id="instagram-feed" class="row m-0"></div> -->
+    
 <!--End Container and border-->
   </div>
 </div>
