--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
               <a href="https://bit.ly/LangTexticFB" target="_blank" class="py-2 px-3 fs-4"><i class="bi bi-facebook"></i></a>
             </div>
     
+    
     <!--Video-->
     <div class="row mb-3">
       <div class="col text-center">
@@ -81,7 +82,7 @@
         </div>
        </div>
  
-<!--       <!--IG Feed-->
+<!--       IG Feed
       <div class="row">
         <div class="col text-center">
           <h2 class="rounded-pill p-1 bg-yellow"><i class="bi bi-image"></i> IG限定</h2>
